adds the gha, at least some part of it
adds some more

fdx ftw

adds all this

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 **/node_modules
 /.pnp
 .pnp.js
+.pnpm-store
 
 # testing
 /coverage
@@ -15,7 +16,7 @@
 
 # production
 **/build
-**/packages/snappi/dist
+**/packages/**/dist
 
 # misc
 .DS_Store
