--- a/packages/snappi/package.json
+++ b/packages/snappi/package.json
@@ -14,13 +14,12 @@
     "test:watch": "vitest watch",
     "lint": "eslint packages/snappi/src/**/*.ts",
     "format": "prettier --write \"packages/snappi/src/**/*.ts\"",
-    "prepare": "husky install",
     "prepublishOnly": "npm run build",
     "typecheck": "tsc --noEmit"
   },
   "files": [
     "dist",
-    "README.md",
+    "../../README.md",
     "LICENSE"
   ],
   "keywords": [
@@ -42,9 +41,11 @@
     "glob": "^10.4.5",
     "ora": "^7.0.1",
     "pixelmatch": "^5.3.0",
-    "pngjs": "^6.0.0"
+    "pngjs": "^6.0.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.189",
     "@types/node": "^20.17.11",
     "@types/pixelmatch": "^5.2.6",
     "@types/pngjs": "^6.0.5",
@@ -54,7 +55,6 @@
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^8.0.3",
     "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
     "tsup": "^8.3.5",
