--- a/packages/snappi/package.json
+++ b/packages/snappi/package.json
@@ -42,15 +42,17 @@
     "ora": "^7.0.1",
     "pixelmatch": "^5.3.0",
     "pngjs": "^6.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "node-fetch": "^3.1.0",
+    "form-data": "^4.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.189",
     "@types/node": "^20.17.11",
     "@types/pixelmatch": "^5.2.6",
     "@types/pngjs": "^6.0.5",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.19.0",
+    "@typescript-eslint/parser": "^8.19.0",
     "@vitest/coverage-v8": "^0.34.6",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
@@ -70,18 +72,20 @@
       "prettier --write"
     ]
   },
+  "type": "module",
   "tsup": {
     "entry": [
       "src/index.ts",
       "src/cli.ts"
     ],
     "format": [
-      "cjs",
       "esm"
     ],
     "dts": true,
     "splitting": false,
     "sourcemap": true,
-    "clean": true
+    "clean": true,
+    "shims": true,
+    "target": "node18"
   }
 }
