--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@reshot-sdk/snappi",
+  "name": "@snappi-sdk/cli",
   "version": "0.1.0",
   "description": "Modern functional visual regression testing library",
   "main": "dist/index.js",
